--- a/src/main/resources/static/css/board/boardList.css
+++ b/src/main/resources/static/css/board/boardList.css
@@ -1,2 +1,132 @@
 @charset "UTF-8";
 
+.box {
+	width: 70%;
+	margin: 0 auto;
+	margin-bottom: 100px;
+}
+
+.title {
+	text-align: center;
+	width: 100%;
+	height: 50px;
+	margin: 0 auto;
+}
+
+.skillContainer {
+	width: 100%;
+	height: 550px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: center;
+	margin: 0 auto;
+	border-radius: 50px;
+}
+
+.skillList {
+	border: 2px solid silver;
+	width: auto;
+	height: 50px;
+	border-radius: 50px;
+	text-align: center;
+	margin: 15px 15px;
+	padding: 4px 15px;
+	cursor: pointer;
+	opacity: 0.3;
+	list-style: none;
+}
+
+.skillbox {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: auto;
+	height: 40px;
+}
+
+.imgbox {
+	border: 1.5px solid silver;
+	border-radius: 50px;
+	padding: 1px;
+	padding-top: 5px;
+	width: 40px;
+	height: 40px;
+}
+
+.skillimage {
+	width: 28px;
+	height: 28px;
+	object-fit: contain;	
+}
+
+.skill {
+	font-size: 15px;
+	font-weight: bold;
+	margin-left: 10px;
+}
+
+.choice {
+	opacity: 1;
+}
+
+.choiceSkill {
+	display: inline-block;
+	float: left;
+}
+
+#reset {
+	width: 100px;
+	height: 35px;
+	display: inline-block;
+	border: 2px solid black;
+	border-radius: 50px;
+	padding-left: 8px;
+	padding-top: 6px;
+	float: right;
+	cursor: pointer;
+	color: white;
+	background-color: black;
+}
+
+#skillChoiceContainer {
+	border: 1px solid black;
+	width: 80%;
+	height: 100px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.select {
+	position: relative;
+	display: inline-block;
+	border: 1px solid black;
+	width: 150px;
+	height: 30px;
+	text-align: left;
+	border-radius: 50px;
+	padding-left: 20px;
+	padding-top: 5px;
+	background-color: silver;
+	cursor: pointer;
+	margin: 20px;
+}
+
+.cancel_PTag {
+	position: absolute;
+	right: 2px;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	margin: 0px;
+	padding-top: 5px;
+	border-radius: 50px;
+	background-color: white;
+	cursor: pointer;
+}
+
+.boardNull {
+	width: 300px;
+	margin: 0 auto;
+}
