--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,54 @@
 @charset "UTF-8";
 
+
+@font-face {
+    font-family: 'Cafe24Ssurround';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+	font-family: 'Cafe24Ssurround';
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.inline-block {
+	display: inline-block;
+}
+
+.block {
+	display: block;
+}
+
+/* 버튼 효과 */
+.button {
+	width: 100px;
+	height: 40px;
+	margin: 5px;
+	background: #6698cb;
+	padding: 4px 12px;
+	font-size: 15px;
+	color: white;
+	border: 0px;
+	background-color: #7fccde;
+	text-align: center;
+	box-shadow: 0px 4px 0px #73b9c9;
+	position: relative;
+	cursor: pointer;  
+}
+
+.button:active {
+	top: 4px;
+	box-shadow: 0 0 #73b9c9;
+       background-color: #70b4c4;
+}
+
+.button:hover {
+	color:yellow;
 }
