--- a/src/main/resources/templates/board/boardModify.html
+++ b/src/main/resources/templates/board/boardModify.html
@@ -253,7 +253,7 @@
 			      	</div>
 			      	<div class="buttonbox">
 				     	<input class="button back" type="button" onclick="back()" value="돌아가기"/>
-				     	<input class="button submit" type="submit" value="등록"/>
+				     	<input class="button submit" type="submit" value="수정완료"/>
 			     	</div>
 		     	</div>
 	     	</div>
