--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -2,11 +2,61 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="../css/main.css">
+<link rel="stylesheet" href="../css/header.css">
 <title>★SPACE★</title>
+<style>
+	
+	.box {
+		width: 60%;
+		margin: 0 auto;
+		margin-bottom: 150px;
+		margin-top: 200px;
+		text-align: center;
+	}
+	
+	.box > p {
+		text-align: center;
+		font-weight: bold;
+		font-size: 40px;
+		margin-bottom: 100px;
+	}
+	
+	.box div {
+		width: 33%;
+		height: 100%;
+	}
+	
+	.box div p {
+		font-weight: bold;
+		font-size: 25px;
+		margin: 25px;
+	}
+	
+	img {
+		width: 200px;
+		height: 200px;
+		border: 2px solid #B0C4DE;
+		border-radius: 50px;
+		box-shadow: 4px 4px 4px 4px gray;
+	}
+</style>
 </head>
 <body>
-	<a href="/oauth2/authorization/google">구글 로그인</a>
-	<a href="/oauth2/authorization/kakao">카카오 로그인</a>
-	<a href="/oauth2/authorization/naver">네이버 로그인</a>
+	<div class="box">
+		<p>SPACE에 방문해주셔서 감사합니다~~!!</p>
+		<div class="inline-block">
+			<a href="/oauth2/authorization/google"><img src="/img/google.png"></a>
+			<p>구글 로그인</p>
+		</div>
+		<div class="inline-block">
+			<a href="/oauth2/authorization/kakao"><img src="/img/kakao.png"></a>
+			<p>카카오 로그인</p>
+		</div>
+		<div class="inline-block">
+			<a href="/oauth2/authorization/naver"><img src="/img/naver.png"></a>
+			<p>네이버 로그인</p>
+		</div>
+	</div>
 </body>
 </html>
