--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -151,10 +151,6 @@
 		transform: scale(1.05);
 	}
 	
-		.hotul {
-		transition: all 0.1s linear;
-	}
-	
 	.loginImgbox {
 		width: 100%;
 		height: 90px;
@@ -314,123 +310,125 @@
 		width: 50px;
 		height: 50px;
 		border: 2.5px solid #ADD8E6;
+		padding: 3px;
 		border-radius: 10px;
 	}
 </style>
 </head>
 <body>
 	<div th:replace="~{header :: header}"></div>
-
-
-	<div id="banner">
-		<img id="prevBtn" style="display:none;" />
-        <div id="bannerBox">
-          <ul>
-            <li class="banner_item"><img src="/img/banner1.png" /></li>
-            <li class="banner_item"><img src="/img/banner2.png" /></li>
-            <li class="banner_item"><img src="/img/banner3.png" /></li>
-          </ul>
-        </div>	    	
-	    <img id="nextBtn" style="display:none;" />
-	</div>
-	
-	<section id="section">		
-		<th:block th:if="${session.users != 'not'}">
-			<!-- 현재 로그인 유저의 정보 확인용 display는 none으로 줬음 -->			
-			<div id="loginUsers" th:text="${session.users.usersnickname}"></div>
-		</th:block>
-	    <div id="container" class="container">
-	    	<div id="maincontent">
-		    	<div id="chatbox">
-			        <div id="chattool" onclick="clearChat()"><img src="/img/err.png" /></div>
-			        <div id="chating" class="chating"></div>
-			        <div id="yourMsg" th:if="${session.users != 'not'}">
-			            <table>
-			                <tr>
-			                    <th>
-			                    	<textarea id="chatcontent" placeholder="보내실 메시지를 입력하세요."></textarea>
-			                    	</th>
-			                    <th>
-			                    	<button class="button" onclick="send()" id="sendBtn">전송</button>
-			                    	<p>
-			                    		<span class="bytes">0</span><span>/500</span>
-			                    	</p>
-			                    </th>
-			                </tr>
-			            </table>
-			        </div>
-			        <div th:if="${session.users == 'not'}">
-			        	<table style="width: 100%; height: 100%; margin-top: 10px;">
-			        		<tr>
-			        			<th>로그인 후 채팅에 참여해주세요!</th>
-			        		</tr>
-			        		<tr>
-			        			<th>
-			        				<div>
-					        			<div class="loginImgbox">
-				        					<a href="/login" id="login">
-					        					<img style="margin-right: 5px;" class="loginImg" src="/img/login.png" />
-					        				</a>
+	<div id="body">
+		<div id="banner">
+			<img id="prevBtn" style="display:none;" />
+	        <div id="bannerBox">
+	          <ul>
+	            <li class="banner_item"><img src="/img/banner1.png" /></li>
+	            <li class="banner_item"><img src="/img/banner2.png" /></li>
+	            <li class="banner_item"><img src="/img/banner3.png" /></li>
+	          </ul>
+	        </div>	    	
+		    <img id="nextBtn" style="display:none;" />
+		</div>
+		
+		<section id="section">		
+			<th:block th:if="${session.users != 'not'}">
+				<!-- 현재 로그인 유저의 정보 확인용 display는 none으로 줬음 -->			
+				<div id="loginUsers" th:text="${session.users.usersnickname}"></div>
+			</th:block>
+		    <div id="container" class="container">
+		    	<div id="maincontent">
+			    	<div id="chatbox">
+				        <div id="chattool" onclick="clearChat()"><img src="/img/err.png" /></div>
+				        <div id="chating" class="chating"></div>
+				        <div id="yourMsg" th:if="${session.users != 'not'}">
+				            <table>
+				                <tr>
+				                    <th>
+				                    	<textarea id="chatcontent" placeholder="보내실 메시지를 입력하세요."></textarea>
+				                    	</th>
+				                    <th>
+				                    	<button class="button" onclick="send()" id="sendBtn">전송</button>
+				                    	<p>
+				                    		<span class="bytes">0</span><span>/500</span>
+				                    	</p>
+				                    </th>
+				                </tr>
+				            </table>
+				        </div>
+				        <div th:if="${session.users == 'not'}">
+				        	<table style="width: 100%; height: 100%; margin-top: 10px;">
+				        		<tr>
+				        			<th>로그인 후 채팅에 참여해주세요!</th>
+				        		</tr>
+				        		<tr>
+				        			<th>
+				        				<div>
+						        			<div class="loginImgbox">
+					        					<a href="/login" id="login">
+						        					<img style="margin-right: 5px;" class="loginImg" src="/img/login.png" />
+						        				</a>
+						        			</div>
 					        			</div>
-				        			</div>
-			        			</th>
-			        		</tr>
-			        	</table>
-			        </div>
-				</div>
-				
-				<div id="hotbox">
-					<div id="hotlist">
-						<div>
-							<img class="inline-block" src="/img/hot.png"/>
-							<p class="inline-block">실시간 인기 게시글</p>
-							<img class="inline-block" src="/img/hot.png"/>
-						</div>
-						<ul class="titleul">
-							<li>제목</li>
-							<li>기술</li>
-							<li>시작 날짜</li>
-							<li>게시글 날짜</li>
-							<li>조회수</li>
-						</ul>
-						<th:block th:each="hot : ${hotList}">
-							<ul class="hotul block" th:onclick="hotBoardView(/*[[${hot.boardnumber}]]*/);">
-								<li th:text="${hot.boardtitle}"></li>												
-								<li>
-									<img th:src="${hot.skillimage}" />
-								</li>
-								<li th:text="${hot.boardstart}"></li>
-								<li th:text="${hot.boarddate}"></li>
-								<li th:text="${hot.boardview}"></li>
+				        			</th>
+				        		</tr>
+				        	</table>
+				        </div>
+					</div>
+					
+					<div id="hotbox">
+						<div id="hotlist">
+							<div>
+								<img class="inline-block" src="/img/hot.png"/>
+								<p class="inline-block">실시간 인기 게시글</p>
+								<img class="inline-block" src="/img/hot.png"/>
+							</div>
+							<ul class="titleul">
+								<li>제목</li>
+								<li>기술</li>
+								<li>시작 날짜</li>
+								<li>게시글 날짜</li>
+								<li>조회수</li>
 							</ul>
-						</th:block>
+							<th:block th:each="hot : ${hotList}">
+								<ul class="hotul block" th:onclick="hotBoardView(/*[[${hot.boardnumber}]]*/);">
+									<li th:text="${hot.boardtitle}"></li>												
+									<li>
+										<img th:src="${hot.skillimage}" />
+									</li>
+									<li th:text="${hot.boardstart}"></li>
+									<li th:text="${hot.boarddate}"></li>
+									<li th:text="${hot.boardview}"></li>
+								</ul>
+							</th:block>
+						</div>
 					</div>
 				</div>
+		    </div>
+	    </section>
+	    <footer>
+			<div class="copyright">
+				<p>Copyright 2022.강경민 all rights reserved.</p>
+				<p>오류 제보 email : <a style="text-decoration: none;" href="mailto:kgm7642@gmail.com">kgm7642@gmail.com</a></p>
 			</div>
-	    </div>
-    </section>
-    <footer>
-		<div class="copyright">
-			<p>Copyright 2022.강경민 all rights reserved.</p>
-			<p>오류 제보 email : <a href="mailto:kgm7642@gmail.com">kgm7642@gmail.com</a></p>
-		</div>
-		<div class="icon">
-			<a href="https://twitter.com/?lang=ko" target="_blank">
-				<img src="/img/twitter.png"/>
-			</a>
-			<a href="https://www.facebook.com/" target="_blank">
-				<img src="/img/facebook.png"/>
-			</a>
-			<a href="https://www.youtube.com/" target="_blank">
-				<img src="/img/youtube.png"/>
-			</a>
-			<a href="https://www.instagram.com/" target="_blank">
-				<img src="/img/instagram.png"/>
-			</a>
-		</div>
-	</footer>
+			<div class="icon">
+				<a href="https://twitter.com/?lang=ko" target="_blank">
+					<img src="/img/twitter.png"/>
+				</a>
+				<a href="https://www.facebook.com/" target="_blank">
+					<img src="/img/facebook.png"/>
+				</a>
+				<a href="https://www.youtube.com/" target="_blank">
+					<img src="/img/youtube.png"/>
+				</a>
+				<a href="https://www.instagram.com/" target="_blank">
+					<img src="/img/instagram.png"/>
+				</a>
+			</div>
+		</footer>
+	</div>
 </body>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="/js/header.js"></script>
 <script th:inline="javascript">
 
 
@@ -475,7 +473,7 @@ function setfunction() {
 	}	
 }
 
-let banner = setInterval(setfunction, 5000);
+let banner = setInterval(setfunction, 4000);
 
 function hotBoardView(boardnumber) {
 	location.href = "/board/view?boardnumber="+boardnumber;
@@ -555,7 +553,7 @@ function onMessage(data) {
 	console.log("msg " + msg);
 
     if(msg != null){
-        $("#chating").append("<p><span style='font-weight: 900;'>" + userid + ": </span><span>" + chatcontents + "</span></p>");
+        $("#chating").append("<p><span style='font-weight: 900; color:#4B0082'>" + userid + ": </span><span>" + chatcontents + "</span></p>");
     }
     scrollMove();
 }
