--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -5,7 +5,6 @@
 	width: 80%;
 	height: 100px;
 	margin: 0 auto;
-	margin-bottom: 20px;
 }
 
 @font-face {
@@ -75,29 +74,29 @@
 }
 
 .hideMenu {
-	width: 120px;
+	width: 150px;
 	height: 150px;
-	background-color: antiquewhite;
+	background-color: white;
 	position: absolute;
 	z-index: 1000;
 	opacity: 0;
 	left: 12px;
-	top: 30px;
+	top: 60px;
 }
 
 .hideMenu > div {
-	width: 120px;
+	width: 150px;
 	height: 150px;
 }
 
 .hideMenu > div > ul {
-	width: 120px;
+	width: 150px;
 	height: 150px;	
 }
 
 .hideMenu > div > ul > li {
 	list-style: none;
-	width: 120px;
+	width: 150px;
 	height: 40px;
 	margin-top: 10px;
 	text-align: center;
