FEAT : 프로필 기술 스택 수정 완료

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,7 +25,7 @@
 						<ul>
 				      		<li>
 				      			<div>
-				      				<p><a class="hideA" href="/profile">프로필 관리</a></p>
+				      				<p><a class="hideA" href="/myInfo">프로필 관리</a></p>
 				      			</div>
 				      		</li>
 				      		<li>
