--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -39,6 +39,8 @@
 	float: right;
 	padding-right: 10px;
 	padding-top: 40px;
+	font-family: arial;
+	font-weight: 900;
 }
 
 .rightBox > div > a {
@@ -82,6 +84,8 @@
 	opacity: 0;
 	left: 12px;
 	top: 60px;
+	font-family: arial;
+	font-weight: 900;
 }
 
 .hideMenu > div {
