--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -431,6 +431,9 @@
 <script src="/js/header.js"></script>
 <script th:inline="javascript">
 
+if(/*[[${param.update}]]*/"" == "t") {
+	alert("프로필 수정을 완료했습니다. 다시 로그인 해주세요.");
+}
 
 let bannerBox = document.querySelector("#bannerBox > ul");
 let bannerItem = document.querySelectorAll(".banner_item");
