--- a/src/main/resources/templates/users/myInfo.html
+++ b/src/main/resources/templates/users/myInfo.html
@@ -3,16 +3,431 @@
 <head>
 <meta charset="UTF-8">
 <title>★SPACE★</title>
+<link rel="stylesheet" href="../css/main.css">
+<link rel="stylesheet" href="../css/header.css">
+<style>
+	#section {
+		width: 70%;
+		margin: 0 auto;
+	}
+	
+	#nickbox {
+		margin: 0 auto;
+		margin-top: 100px;
+		margin-bottom: 70px;
+		text-align: center;
+	}
+	
+	.nick {
+		font-size: 25px;
+		margin-right: 15px;
+	}
+	
+	#usersnickname {
+		width: 250px;
+		height: 45px;
+	}
+	
+	#changebtn {
+		width: 150px;
+		height: 25px;
+		margin-left: 30px;
+		margin-top: 50px;
+		margin-bottom: 50px;
+	}
+	
+	.img {
+		width: 80%;
+		margin: 0 auto;
+		padding: 10px;
+	}
+	
+	.img a:nth-child(1) img {
+		float: letf;
+	}
+
+	.img a:nth-child(2) img {
+		float: right;
+		width: 50px;
+	}
+	
+	.container {
+		width: 70%;
+		margin: 0 auto;
+		margin-top: 50px;
+	}
+	
+	.box1 {
+		width: 70%;
+		margin: 0 auto;
+		margin-top: 50px;
+	}
+	
+	.box1 p {
+		text-align: center;
+		font-size: 30px;
+		font-weight: bold;
+	}
+	
+	.cnt1 {
+		color: #DA70D6;
+	}
+	
+	.cnt2 {
+		color: #FF1493;
+	}
+	
+	.cnt3 {
+		color: #D3D3D3;
+	}
+	
+	.title {
+		text-align: center;
+		width: 100%;
+		height: 50px;
+	}
+	
+	.box2 {
+		width: 80%;
+		margin: 0 auto;
+		margin-top: 20px;
+		margin-bottom: 150px;
+		text-align: center;
+	}
+	
+	.skillContainer {
+		width: 100%;
+		height: 600px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
+		border-radius: 50px;
+		text-align: center;
+	}
+	
+	.skillList {
+		border: 1.5px solid #333333;
+		width: 150px;
+		border-radius: 50px;
+		text-align: center;
+		margin: 5px 5px;
+		cursor: pointer;
+		color: #E6E6FA;
+		background-color: #333333;
+		box-shadow: 2px -5px 5px 0px black;
+	}
+	
+	#skillChoiceContainer {
+		position: relative;
+		width: 80%;
+		height: 100px;
+		text-align: center;
+		margin: 0 auto;
+		margin-top: 10px;
+	}
+	
+	.select {
+		display: inline-block;
+		border: 1px solid #9966CC;
+		width: 150px;
+		height: 30px;
+		text-align: center;
+		border-radius: 50px;
+		padding-top: 5px;
+		margin: 20px;
+		color: #E6E6FA;
+		background-color: #9966CC;
+	}
+	
+	#reset {
+		border: 2px dotted black;
+		border-radius: 50px;
+		padding: 5px;
+		width: 150px;
+		cursor: pointer;
+		float: left;
+	}
+	
+	.submit, .fire {
+		float: right;
+		margin-bottom: 50px;
+	}
+</style>
 </head>
 <body>
-	<form method="post" th:action="@{/joinDo}">
-		아이디 <input type="text" name="username"/>
-		비번 <input type="password" name="userspw"/>
-		닉네임 <input type="text" name="usersnickname"/>
-		이메일 <input type="text" name="usersemail"/>
-		<input type="radio" name="role" value="ROLE_ADMIN"> admin
-      	<input type="radio" name="role" value="ROLE_USER" checked="checked"> user <br>
-		<input type="submit" value="가입"/>
-	</form>
+	<div th:replace="~{header :: header}"></div>
+	<div id="container">
+		<section id="section">
+			<form method="post" th:action="@{/myInfo}" th:object="${users}" onsubmit="return send();">
+				<div id="nickbox">
+					<span class="block" id="ResultNickname" style="color:red; display:none;">사용할 수 있는 닉네임입니다.</span>
+					<span class="nick inline-block">닉네임 : </span><input type="text" readonly id="usersnickname" placeholder="2~6 글자" th:field=*{usersnickname}/>
+					<input type="button" value="중복검사" id="overlap" style="display:none;" class="button" onclick="checkNickName()">
+					<input type="button" value="재설정" id="retry" class="button" onclick="retryNickName()">
+				</div>
+				<p id="changebtn" class="button">기술 변경안함</p>
+				<div id="skillbox">
+					<div class="skillContainer">
+						<div th:each="val : ${skillList}" th:text="${val.skillname}" class="skillList"></div>
+					</div>
+					<div id="skillChoiceContainer"></div>
+					<div id="reset" class="inline-block">다시 선택할래요..</div>
+				</div>
+				<input type="hidden" th:field="*{usersnumber}" name="usersnumber"/>
+				<input type="submit" class="inline-block button submit" value="수정완료"/>	
+				<input type="button" class="inline-block button fire" value="회원탈퇴" onclick="fireUsers();"/>
+			</form>		
+		</section>
+	</div>
 </body>
+<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script th:inline="javascript">
+
+function fireUsers() {
+    if (!confirm("정말 탈퇴하시겠습니다??")) {
+        // 취소(아니오) 버튼 클릭 시 이벤트
+        alert("감사합니다. 더 발전하는 space가 되기 위해 노력하겠습니다!!");
+        return false;
+    } else {
+        // 확인(예) 버튼 클릭 시 이벤트
+        location.href = "/fire?fire="/*[[${users.usersnumber}]]*/;
+    }
+}
+
+let usersnickname = document.getElementById("usersnickname");
+let resultNicknameTag = document.getElementById("ResultNickname");
+let overlap = document.getElementById("overlap");
+let retry = document.getElementById("retry");
+let un = /*[[${users.usersnickname}]]*/"";
+
+function retryNickName() {
+	usersnickname.readOnly = false;
+	retry.style.display = "none";
+	overlap.style.display = "inline";
+	resultNicknameTag.style.display = "block";
+	resultNicknameTag.innerHTML = "";
+	usersnickname.value = null;
+}
+
+function send() {
+	if (usersnickname.value == "") {
+		alert("닉네임을 입력해주세요.");
+		usersnickname.focus();
+		return false;
+	}
+
+	if (resultNicknameTag.innerHTML == "") {
+		alert("닉네임 중복검사를 진행해주세요.");
+		usersnickname.focus();
+		return false;
+	}
+	
+	if (resultNicknameTag.innerHTML != "사용할 수 있는 닉네임입니다.") {
+		alert("중복된 닉네임이 있습니다.");
+		usersnickname.focus();
+		return false;
+	}
+	return true;
+}
+
+function checkNickName() {
+	if (usersnickname.value.length < 2 || usersnickname.value.length > 6) {
+		alert("닉네임은 2자 이상 6자 이하로 입력해주세요.");
+		usersnickname.focus();
+		return false;
+	}
+	
+	let json = {"usersnickname":usersnickname.value}
+	$.ajax(
+			{
+				type:"POST",
+				url:"/checkNick",
+				data:JSON.stringify(json),
+				contentType: "application/json",
+				success:function(result,status,xhr){
+					console.log(result);
+					if(result == "fail"){						
+						resultNicknameTag.innerHTML = "이미 존재하는 닉네임입니다.";
+						nicknameTag.focus();
+					}else{
+						resultNicknameTag.innerHTML = "사용할 수 있는 닉네임입니다.";
+						usersnickname.readOnly = true;
+						retry.style.display = "inline";
+						overlap.style.display = "none";
+					}
+				},
+				error:function(xhr,status,e){
+						}
+			}		
+		)
+}
+
+let skillContainer = document.querySelector(".skillContainer");
+let reset = document.getElementById("reset");
+let skillList = document.getElementsByClassName("skillList");
+let skillChoiceContainer = document.getElementById("skillChoiceContainer");
+let changebtn = document.getElementById("changebtn");
+let selectArr = /*[[${users.skill}]]*/"";
+let selectCnt = selectArr.length;
+
+$(document).ready(function() {
+	if(selectCnt == 1) {
+		for(let i=0; i<skillList.length; i++){
+			if(selectArr[0] == skillList[i].innerHTML) {
+				let select_PTag = document.createElement("p");
+				let cancel_PTag = document.createElement("p");
+				skillList[i].setAttribute("class", "skillList");
+				skillList[i].style.opacity="0.2";
+				select_PTag.setAttribute("class", "select select_PTag"+i);
+				select_PTag.setAttribute("id", "select_PTag"+i);
+				select_PTag.innerHTML = skillList[i].innerHTML;
+				skillChoiceContainer.appendChild(select_PTag);
+				select_PTag.appendChild(cancel_PTag);
+				selectArr[0] = skillList[i].innerHTML;
+				
+				let select_HiddenTag = document.createElement("input");
+				select_HiddenTag.setAttribute("type", "hidden");
+				select_HiddenTag.setAttribute("value", skillList[i].innerHTML);
+				select_HiddenTag.setAttribute("name", "skillarry");
+				skillChoiceContainer.appendChild(select_HiddenTag);					
+			}
+		}
+	}
+	if(selectCnt == 2) {
+		for(let i=0; i<skillList.length; i++){
+			if(selectArr[0] == skillList[i].innerHTML || selectArr[1] == skillList[i].innerHTML) {
+				let select_PTag = document.createElement("p");
+				let cancel_PTag = document.createElement("p");
+				skillList[i].setAttribute("class", "skillList");
+				skillList[i].style.opacity="0.2";
+				select_PTag.setAttribute("class", "select select_PTag"+i);
+				select_PTag.setAttribute("id", "select_PTag"+i);
+				select_PTag.innerHTML = skillList[i].innerHTML;
+				skillChoiceContainer.appendChild(select_PTag);
+				select_PTag.appendChild(cancel_PTag);
+				selectArr[0] = skillList[i].innerHTML;
+				
+				let select_HiddenTag = document.createElement("input");
+				select_HiddenTag.setAttribute("type", "hidden");
+				select_HiddenTag.setAttribute("value", skillList[i].innerHTML);
+				select_HiddenTag.setAttribute("name", "skillarry");
+				skillChoiceContainer.appendChild(select_HiddenTag);					
+			}
+		}
+	}
+	if(selectCnt == 3) {
+		for(let i=0; i<skillList.length; i++){
+			console.log("selectArr[0]"+selectArr[0]);
+			console.log("selectArr[1]"+selectArr[1]);
+			console.log("selectArr[2]"+selectArr[2]);
+			console.log("skillList[i]"+skillList[i].innerHTML);
+			if(selectArr[0] == skillList[i].innerHTML || selectArr[1] == skillList[i].innerHTML || selectArr[2] == skillList[i].innerHTML) {
+				let select_PTag = document.createElement("p");
+				let cancel_PTag = document.createElement("p");
+				skillList[i].setAttribute("class", "skillList");
+				skillList[i].style.opacity="0.2";
+				select_PTag.setAttribute("class", "select select_PTag"+i);
+				select_PTag.setAttribute("id", "select_PTag"+i);
+				select_PTag.innerHTML = skillList[i].innerHTML;
+				skillChoiceContainer.appendChild(select_PTag);
+				select_PTag.appendChild(cancel_PTag);
+				selectArr[0] = skillList[i].innerHTML;
+				
+				let select_HiddenTag = document.createElement("input");
+				select_HiddenTag.setAttribute("type", "hidden");
+				select_HiddenTag.setAttribute("value", skillList[i].innerHTML);
+				select_HiddenTag.setAttribute("name", "skillarry");
+				skillChoiceContainer.appendChild(select_HiddenTag);					
+			}
+		}
+	}
+});
+
+changebtn.onclick = function () {		
+	skillContainer.style.display = "none";
+	skillChoiceContainer.style.display = "none";
+	changebtn.style.display = "none";
+	reset.style.display = "none";
+	select.style.display = "none";
+}
+
+for(let i=0; i<skillList.length; i++){
+	skillList[i].onclick = function () {
+		
+		if(skillList[i].style.opacity == 0.2) {
+			alert("같은 기술 선택은 선택할 수 없어요...");
+			return;
+		}
+		selectCnt++;
+		if(selectCnt>3){
+			alert("최대 3개까지 선택할 수 있습니다!");
+			return;
+		}
+		
+		if(selectCnt==1){
+			let select_PTag = document.createElement("p");
+			let cancel_PTag = document.createElement("p");
+			skillList[i].setAttribute("class", "skillList");
+			skillList[i].style.opacity="0.2";
+			select_PTag.setAttribute("class", "select select_PTag"+i);
+			select_PTag.setAttribute("id", "select_PTag"+i);
+			select_PTag.innerHTML = skillList[i].innerHTML;
+			skillChoiceContainer.appendChild(select_PTag);
+			select_PTag.appendChild(cancel_PTag);
+			selectArr[0] = skillList[i].innerHTML;
+			
+			let select_HiddenTag = document.createElement("input");
+			select_HiddenTag.setAttribute("type", "hidden");
+			select_HiddenTag.setAttribute("value", skillList[i].innerHTML);
+			select_HiddenTag.setAttribute("name", "skillarry");
+			skillChoiceContainer.appendChild(select_HiddenTag);	
+		} else if(selectCnt==2){
+			let select_PTag = document.createElement("p");
+			let cancel_PTag = document.createElement("p");
+			skillList[i].setAttribute("class", "skillList");
+			skillList[i].style.opacity="0.2";
+			select_PTag.setAttribute("class", "select select_PTag"+i);
+			select_PTag.setAttribute("id", "select_PTag"+i);
+			select_PTag.innerHTML = skillList[i].innerHTML;
+			skillChoiceContainer.appendChild(select_PTag);
+			select_PTag.appendChild(cancel_PTag);
+			selectArr[1] = skillList[i].innerHTML;
+			
+			let select_HiddenTag = document.createElement("input");
+			select_HiddenTag.setAttribute("type", "hidden");
+			select_HiddenTag.setAttribute("value", skillList[i].innerHTML);
+			select_HiddenTag.setAttribute("name", "skillarry");
+			skillChoiceContainer.appendChild(select_HiddenTag);
+		} else {
+			let select_PTag = document.createElement("p");
+			let cancel_PTag = document.createElement("p");
+			skillList[i].setAttribute("class", "skillList");
+			skillList[i].style.opacity="0.2";
+			select_PTag.setAttribute("class", "select select_PTag"+i);
+			select_PTag.setAttribute("id", "select_PTag"+i);
+			select_PTag.innerHTML = skillList[i].innerHTML;
+			skillChoiceContainer.appendChild(select_PTag);
+			select_PTag.appendChild(cancel_PTag);
+			selectArr[2] = skillList[i].innerHTML;
+			
+			let select_HiddenTag = document.createElement("input");
+			select_HiddenTag.setAttribute("type", "hidden");
+			select_HiddenTag.setAttribute("value", skillList[i].innerHTML);
+			select_HiddenTag.setAttribute("name", "skillarry");
+			skillChoiceContainer.appendChild(select_HiddenTag);
+		}
+	};
+}
+reset.addEventListener('click', function(){
+	while(skillChoiceContainer.hasChildNodes()) {			
+		skillChoiceContainer.removeChild(skillChoiceContainer.firstChild);
+	}
+	selectCnt=0;
+	for(let i=0; i<skillList.length; i++){
+		skillList[i].style.opacity="1";
+	}
+});
+</script>
 </html>
