FEAT : 회원 탈퇴 완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -434,6 +434,9 @@
 if(/*[[${param.update}]]*/"" == "t") {
 	alert("프로필 수정을 완료했습니다. 다시 로그인 해주세요.");
 }
+if(/*[[${param.fire}]]*/"" == "t") {
+	alert("회원 탈퇴를 완료했습니다.");
+}
 
 let bannerBox = document.querySelector("#bannerBox > ul");
 let bannerItem = document.querySelectorAll(".banner_item");
