--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -30,7 +30,9 @@
 		</div>	
 	</div>	
     <section class="section"></section>
+    <a href="#headerBox"><p class="top">TOP</p></a>
 </body>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 <script src="/js/board/boardList.js"></script>
+<script src="/js/header.js"></script>
 </html>
