--- a/src/main/resources/templates/board/boardModify.html
+++ b/src/main/resources/templates/board/boardModify.html
@@ -261,6 +261,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="/js/header.js"></script>
 <script>
 
 // 페이지 로딩시 제목, 내용 byte 체크
