--- a/src/main/resources/templates/users/myInfo.html
+++ b/src/main/resources/templates/users/myInfo.html
@@ -183,6 +183,7 @@
 	</div>
 </body>
 <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+<script src="/js/header.js"></script>
 <script th:inline="javascript">
 
 function fireUsers() {
