--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -98,13 +98,20 @@
 	height: 150px;	
 }
 
-.hideMenu > div > ul > li {
+.hideMenu > div > ul > a > li {
 	list-style: none;
 	width: 150px;
 	height: 40px;
 	margin-top: 10px;
+	padding-top: 7px;
 	text-align: center;
 	border: 0px !important;
+}
+
+.hideMenu > div > ul > a > li:hover {
+	background-color: #B0E0E6;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 .hideA {
